color contrast issues fixed.

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -5,7 +5,7 @@ Author: Compete Themes
 Author URI: http://competethemes.com/
 Description: A Bold, Responsive Blog Theme
 Tags: green, gray, light, white, one-column, responsive-layout, accessibility-ready, custom-menu, featured-images, sticky-post, theme-options, threaded-comments
-Version: 1.05
+Version: 1.06
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
@@ -271,7 +271,7 @@ input[type="submit"]:hover {
 
 .fa.toggle-button {
   color: $gray-light;
-  text-shadow: -0.077em 0.077em $gray-little-darker;
+  text-shadow: -0.077em 0.077em $gray-darkest;
   line-height: 1.85;
   @extend %t-medium-large;
   @include transition(all 0.15s ease-in-out);
@@ -284,7 +284,7 @@ input[type="submit"]:hover {
   line-height: 0;
   position: relative;
   z-index: 0;
-  background: $gray-dark;
+  background: $gray-darker;
   padding: 0 5.55%;
   height: 3em;
 }
@@ -300,7 +300,7 @@ input[type="submit"]:hover {
 .site-title {
   @extend %t-medium-large;
   text-transform: uppercase;
-  text-shadow: -0.077em 0.077em $gray-little-darker;
+  text-shadow: -0.077em 0.077em $gray-darkest;
 
   a,
   a:link,
@@ -452,6 +452,7 @@ input[type="submit"]:hover {
   background: $green;
   padding: 1.5em 5.55%;
   text-transform: uppercase;
+  color: $gray-darker;
   @include transition(margin 0.3s ease-in-out);
 
   h1,
@@ -459,6 +460,7 @@ input[type="submit"]:hover {
     text-shadow: -0.063em 0.063em $green-dark;
     word-wrap: break-word;
     -ms-word-wrap: break-word;
+    color: $gray-darkest;
   }
   p {
     margin: 0;
@@ -541,6 +543,14 @@ input[type="submit"]:hover {
   a,
   span {
     margin: 0 0.25em;
+  }
+  a:link,
+  a:visited {
+    color: $green;
+  }
+  a:hover,
+  a:active {
+    color: $green-light;
   }
   .prev,
   .next {
@@ -774,11 +784,24 @@ input[type="submit"] {
 /* Footer */
 
 .site-footer {
-  background: $gray;
+  background: $gray-darker;
   padding: 1.5em 5.55% 0;
   position: relative;
+  color: $gray-medium-dark;
   @include transition(all 0.3s ease-in-out);
 
+  a {
+    color: white;
+
+    &:link,
+    &:visited {
+      color: white;
+    }
+    &:hover,
+    &:active {
+      color: $green-light;
+    }
+  }
   // enable hardware acceleration
   -webkit-transform: translate3d(0,0,0);
   -moz-transform: translate3d(0,0,0);
@@ -797,6 +820,9 @@ input[type="submit"] {
       list-style: none;
       margin-right: 0;
     }
+  }
+  .copyright {
+    background: $gray-darkest;
   }
 }
 .sidebar-subsidiary {
@@ -1192,7 +1218,7 @@ input[type="search"]::-webkit-search-results-decoration {
     float: left;
     z-index: 1;
     background: none;
-    height: 100%;
+    height: auto;
 
     &:after {
       @include clearfix;
@@ -1235,6 +1261,7 @@ input[type="search"]::-webkit-search-results-decoration {
   }
   .menu-slider {
     width: 100%;
+    height: auto;
     padding: 0 16.65%;
     background: none;
     color: $gray-dark;
@@ -1372,12 +1399,10 @@ input[type="search"]::-webkit-search-results-decoration {
   /* footer */
 
   .site-footer {
-    clear: both;
     float: right;
     width: 66.66%;
     padding: 1.5em 5.55% 0;
-    background: $gray-dark;
-    color: $gray-light;
+
   }
   .copyright {
     left: -10%;
