--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,9 +4,9 @@
 
 /* Theme Colors */
 
-$green-light: #56cc9f;
-$green: #4ab28a;
-$green-dark: #409977;
+$green-light: #2f996f;
+$green: #28805D;
+$green-dark: #20664a;
 
 $off-white: #f5f5f5;
 
